Fix margins on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -108,7 +108,7 @@ hr {
 
     .about-me {
         font-size: 14px;
-
+        margin: 0;
 
         a {
             color: #007bff;
